<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".UserEditActivity"
    android:padding="20dp"
    android:fillViewport="true">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <!-- NOMBRE -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/nombre_completo"
            app:hintEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputNombre"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- CORREO (NO EDITABLE) -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutCorreo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:hint="@string/correo_electronico">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/inputCorreo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:enabled="false"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- ROL -->
        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/layoutRol"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:text="@string/rol"
            app:endIconMode="dropdown_menu">

            <com.google.android.material.textfield.MaterialAutoCompleteTextView
                android:id="@+id/dropdownRol"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="none" />
        </com.google.android.material.textfield.TextInputLayout>


        <!-- SUCURSAL (VISIBLE SOLO SI ES CAJERO) -->
        <LinearLayout
            android:id="@+id/layoutSucursal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:visibility="gone">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/layoutSucursalText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/sucursal"
                app:endIconMode="dropdown_menu">

                <com.google.android.material.textfield.MaterialAutoCompleteTextView
                    android:id="@+id/dropdownSucursal"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="none" />
            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <!-- BOTÓN GUARDAR -->
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnGuardarUsuario"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/guardar_cambios"
            android:layout_marginTop="25dp"
            android:textAllCaps="false"
            android:radius="10dp"
            android:textColor="@android:color/white"
            android:backgroundTint="@color/colorPrimary" />
    </LinearLayout>

</ScrollView>
